--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
     <!-- header-->
     <header>
         <nav>
-            <a href="index.html"><img src="{{ asset('assets/img/logo.png') }}" alt="Vehicloc" /></a>
+            <a href="{{ path('app_accueil')}}"><img src="{{ asset('assets/img/logo.png') }}" alt="Vehicloc" /></a>
             <a href="add.html" class="btn-nav">Ajouter une voiture</a>
         </nav>
         {% block header %}{% endblock %}
@@ -28,8 +28,8 @@
                 <li><a href="#">Mentions légales</a></li>
                 <li><a href="#">Nous contacter</a></li>
                 <li>
-                <a href="#"><img src="assets/icons/instagram.png" alt="Instagram" /></a>
-                <a href="#"><img src="assets/icons/facebook.png" alt="Facebook" /></a>
+                <a href="#"><img src="{{ asset('assets/icons/instagram.png') }}" alt="Instagram" /></a>
+                <a href="#"><img src="{{ asset('assets/icons/facebook.png') }}" alt="Facebook" /></a>
                 </li>
             </ul>
             <ul>
