--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
           content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>{% block title %}{% endblock %} | Véhicloc</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
     </head>
     <body>
@@ -13,7 +14,7 @@
     <header>
         <nav>
             <a href="{{ path('app_accueil')}}"><img src="{{ asset('assets/img/logo.png') }}" alt="Vehicloc" /></a>
-            <a href="add.html" class="btn-nav">Ajouter une voiture</a>
+            <a href="{{ path('app_voiture_add')}}" class="btn-nav">Ajouter une voiture</a>
         </nav>
         {% block header %}{% endblock %}
     </header>
